snapshots/syntax/library/functions/interaction/command/command_in_print.snap
---
source: src/syntax/library/functions/interaction/command.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: PrintStatement
      children:
        - kind: PrintKeyword
          text: Print
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"Command line: \""
        - kind: Semicolon
          text: ;
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Command
        - kind: LeftParenthesis
          text: (
        - kind: RightParenthesis
          text: )
        - kind: Newline
          text: "\n"
